test/spec_vectors/simd_f32x4_rounding/fail/module_19.wat
(module (func (result v128) (f32x4.trunc (i32.const 0))))